Name:                test
Version:             0.1
Synopsis:            test
License:             PublicDomain
License-file:        LICENSE
Author:              xxx
Maintainer:          xxx@yyy
Category:            test
Build-type:          Simple
Cabal-version:       >=1.8

Executable fanout
  Main-is:             Fanout.hs
  hs-source-dirs:      . ../src
  build-depends: base       >= 4     && < 5,
                 containers >= 0.2   && < 1,
                 directory  >= 1     && < 2,
                 filepath   >= 1     && < 2,
                 parsec     >= 2.1   && < 4,
                 HUnit      >= 1.2   && < 2,
                 mtl        >= 2.0.1 && < 3,
                 deepseq    >= 1.1   && < 2,
                 bytestring >= 0.9   && < 1,
                 binary     >= 0.5   && < 1,
                 mxt-charproperties  >= 9.1    && < 10,
                 mxt-unicode         >= 9.0.1  && < 10,
                 mxt-regex-xmlschema >= 9.2    && < 10,
                 network-uri >= 2.6
  extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances CPP

Executable hread
  Main-is:             Hread.hs
  hs-source-dirs:      . ../src
  build-depends: base       >= 4     && < 5,
                 containers >= 0.2   && < 1,
                 directory  >= 1     && < 2,
                 filepath   >= 1     && < 2,
                 parsec     >= 2.1   && < 4,
                 HUnit      >= 1.2   && < 2,
                 mtl        >= 2.0.1 && < 3,
                 deepseq    >= 1.1   && < 2,
                 bytestring >= 0.9   && < 1,
                 binary     >= 0.5   && < 1,
                 mxt-charproperties  >= 9.1    && < 10,
                 mxt-unicode         >= 9.0.1  && < 10,
                 mxt-regex-xmlschema >= 9.2    && < 10,
                 network-uri >= 2.6
  extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances CPP


  
